syntax = "proto3";

option java_package = "message.generated.grpc";
package message;

service Message {
  rpc PostMessage(PostMessageRequest) returns (PostMessageResponse) {}
  rpc Items(ItemsRequest) returns (ItemsResponse) {}
}

message MessageModel {
  bytes image = 1;
}

message PostMessageRequest {
  MessageModel message = 1;
}

message PostMessageResponse {
  int32 id = 1;
  bytes image = 2;
}

message ItemsResponse {
  repeated Item items = 1;
}

message ItemsRequest {
  int32 id = 1;
}

message Item {
  int64 id = 1;
  bytes image = 2;
}
